versioned_docs/version-22.3/reference/rpk/rpk-topic/rpk-topic-produce.mdx
---
title: rpk topic produce
---

<head>
  <meta name="title" content="rpk topic produce | Redpanda Docs" />
  <meta name="description" content="rpk topic produce" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-topic/rpk-topic-produce/" />
</head>

Produce records to a topic.

Producing records reads from `STDIN`, parses input according to `--format`, and
produce records to Redpanda. The input formatter understands a wide variety of
formats.

Parsing input operates on either sizes or on delimiters, both of which can be
specified in the same formatting options. If using sizes to specify something,
the size must come before what it is specifying. Delimiters match on an exact
text basis. This command will quit with an error if any input fails to match
your specified format.

### Usage

```
rpk topic produce [TOPIC] [flags]
```

### Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong> Description</strong>
      </td>
    </tr>
    <tr>
      <td>--acks</td>
      <td>int</td>
      <td>
        Number of acks required for producing (<code>-1=all</code>, <code>0=none</code>, <code>1=leader</code>)
        (default <code>-1</code>)
      </td>
    </tr>
    <tr>
      <td>--allow-auto-topic-creation</td>
      <td>-</td>
      <td>
        Auto-create non-existent topics; requires auto_create_topics_enabled on the
        broker
      </td>
    </tr>
    <tr>
      <td>--delivery-timeout</td>
      <td>duration</td>
      <td> Per-record delivery timeout, if non-zero, min 1s</td>
    </tr>
    <tr>
      <td>-H, --header</td>
      <td>stringArray</td>
      <td> Headers in format key:value to add to each record (repeatable)</td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for produce</td>
    </tr>
    <tr>
      <td>-k, --key</td>
      <td>string</td>
      <td>
        A fixed key to use for each record (parsed input keys take precedence)
      </td>
    </tr>
    <tr>
      <td>-p, --partition</td>
      <td>int32</td>
      <td>
        Partition to directly produce to, if non-negative (also allows %p
        parsing to set partitions) (default -1)
      </td>
    </tr>
    <tr>
      <td>-Z, --tombstone</td>
      <td>-</td>
      <td> Produce empty values as tombstones</td>
    </tr>
    <tr>
      <td>--brokers</td>
      <td>strings</td>
      <td>
        Comma-separated list of broker &lt;ip&gt;:&lt;port&gt; pairs (for example,
        <code>
          --brokers '192.168.78.34:9092,192.168.78.35:9092,192.179.23.54:9092'
        </code>
        ). Alternatively, you may set the <code>REDPANDA_BROKERS</code>
        environment variable with the comma-separated list of broker addresses.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda config file, if not set the file will be searched for in the
        default locations.
      </td>
    </tr>
    <tr>
      <td>--password</td>
      <td>string</td>
      <td> SASL password to be used for authentication.</td>
    </tr>
    <tr>
      <td>--sasl-mechanism</td>
      <td>string</td>
      <td>
        The authentication mechanism to use. Supported values:
        <code>SCRAM-SHA-256</code>, <code>SCRAM-SHA-512</code>.
      </td>
    </tr>
    <tr>
      <td>--tls-cert</td>
      <td>string</td>
      <td>
        The certificate to be used for TLS authentication with the broker.
      </td>
    </tr>
    <tr>
      <td>--tls-enabled</td>
      <td>-</td>
      <td>
        Enable TLS for the Kafka API (not necessary if specifying custom certs).
      </td>
    </tr>
    <tr>
      <td>--tls-key</td>
      <td>string</td>
      <td>
        The certificate key to be used for TLS authentication with the broker.
      </td>
    </tr>
    <tr>
      <td>--tls-truststore</td>
      <td>string</td>
      <td> The truststore to be used for TLS communication with the broker.</td>
    </tr>
    <tr>
      <td>--user</td>
      <td>string</td>
      <td> SASL user to be used for authentication.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
